# morgan-dev-api

./: .env  .gitignore  .replit  Cargo.toml  README.md  replit.nix
.cargo/: config.toml
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: async-trait-0.1.80.crate  axum-0.7.5.crate  axum-core-0.4.3.crate  finl_unicode-1.2.0.crate  h2-0.4.4.crate  http-body-1.0.0.crate  http-body-util-0.1.1.crate  hyper-1.3.1.crate  hyper-util-0.1.3.crate  libc-0.2.154.crate  parking_lot-0.12.2.crate  phf-0.11.2.crate  phf_shared-0.11.2.crate  postgres-protocol-0.6.6.crate  postgres-types-0.2.6.crate  proc-macro2-1.0.82.crate  rustversion-1.0.16.crate  serde-1.0.201.crate  serde_derive-1.0.201.crate  serde_path_to_error-0.1.16.crate  stringprep-0.1.4.crate  syn-2.0.61.crate  sync_wrapper-1.0.1.crate  tokio-postgres-0.7.10.crate  tower-layer-0.3.2.crate  whoami-1.5.1.crate
.cargo/registry/src/index.crates.io-6f17d22bba15001f/async-trait-0.1.80/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/axum-0.7.5/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/axum-core-0.4.3/: .cargo_vcs_info.json
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
src/db/: connection.rs
src/handlers/: auth.rs  chat.rs  mod.rs  post.rs  user.rs
src/models/: post.rs  user.rs
src/routes/: misc.rs  mod.rs  post.rs  service.rs  user.rs
src/services/: email.rs  mod.rs
(+13 files in other folders)
