[package]
name = "rust-postgres-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
dotenv = "0.15.0"
hyper = { version = "1.3.1", features = ["full"] }
tower = "0.4.13"