[package]
name = "rust-postgres-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7.10", feature = ["with-chrono-0_4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
dotenv = "0.15.0"
hyper = { version = "1.3.1", features = ["full"] }
tower = "0.4.13"
chrono = {version = "0.4", features = ["serde"]}
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-types = "0.2"
